Fixed alignment issue.

--- a/fe-src/sass/main.scss
+++ b/fe-src/sass/main.scss
@@ -55,6 +55,7 @@ body>header>nav {
     align-items: center;
     font-size: .9em;
     font-family: fonts.$expressive-secondary;
+    width: 100%;
 }
 
 main {
